--- a/média.html
+++ b/média.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Média do Aluno</title>
 </head>
 <body>
-    
-</body>
-</html>
-<body>
     <h1> Programa Situação do Aluno </h1>
     <P> Nome do Aluno
-        <input type="text" id="inNome" required>
+        <input type="text" name="" id="inNome">
     </P>
-    <P> 1º Nota
-        <input type="number" id="inNota1" min="0" max=10 required>
+    <P>1º Nota 
+        <input type="number" name="" id="inNota1" min="0" max=10
+        step="0,1" required>
     </P>
-    <P> 2º Nota
-        <input type="number" id="inNota2" min="0" max=10 required>
+    <P> 
+        2º Nota  <input type="number" name="" id="inNota2" min="0" max=10
+        step="0,1" required>
     </P>
-
-    
+    <input type="submit" name="" id="Exibe Média e Situação">
+</fora>
+<h3></h3>
+<h4></h4>
+<script src="media.js"></script>
+</body>    
+</html>
