--- a/média.html
+++ b/média.html
@@ -19,7 +19,7 @@
         step="0,1" required>
     </P>
     <input type="submit" name="" id="Exibe Média e Situação">
-</fora>
+</form>
 <h3></h3>
 <h4></h4>
 <script src="media.js"></script>
