--- a/Peso.html
+++ b/Peso.html
@@ -23,6 +23,6 @@
                 <input type="reset" value="Limpar Campo">
                 </form>
                 <h3></h3>
-                <script src="Peso.js"></script>
+                <script src="peso.js"></script>
 </body>
 </html>
