--- a/velocidade.html
+++ b/velocidade.html
@@ -9,19 +9,17 @@
 <body>
     <img src="img/exerc.jpg" alt="">
     <h1> Programa Verifica a Velocidade </h1>
-    </P>
+    <form>
+    
     <P>Velocidade Permitida
-        <input type="number" name="Permitida" id="inVelocidadePermitida" min="30 KM" max="70 KM"
-        step="0,1" required>
+        <input type="number" name="Permitida" id="inPermitida" min="5" required>
     </P>
     <P> 
-        Velocidade do Condutor  <input type="number" name="Condutor" id="InVelocidadeCondutor" min="0" max="150"
-        step="0,1" required>
+        Velocidade do Condutor  <input type="number" name="Condutor" id="inCondutor" min="0" required>
     </P>
-    <input type="submit" name="" id="Exibe Verifica a Velocidade">
+    <input type="submit" value="Calcular Velocidade">
 </form>
 <h3></h3>
-<h4></h4>
 <script src="velocidade.js"></script>
 </body>    
 </html>
